# mie-combine

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Procfile  README.MD  README.md  all_env.py  api.py  base.py  data_108.json  data_274.json  deploy-swarm.sh  discloud.config  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  easy_mongodb.py  keep_alive.py  main.py  migration.py  note.txt  pyproject.toml  readme.txt  requirements.txt  run.sh  setup-swarm.sh  test.py
.github/workflows/: deploy.yml
.github_store/workflows/: deploy.yml
api/: __init__.py  app.py  members.py  server_stats.py  stats.py  store.txt  user_stats.py
api/schemas/: __init__.py  user_stats.py
api/templates/: study_chart.html
base/: __init__.py  event_handlers.py  settings.py
bot/: __init__.py  admin_commands.py  ai.py  confession.py  create_vc.py  event_handlers.py  help.py  money.py  settings.py  study_time.py  voice_channel.py
bot/ai/: __init__.py  file_service.py  gemini_service.py  guard_service.py  (+4 more)
bot_features/: __init__.py
confession/: __init__.py  confession.py  dropdown.py  image_handle.py
core/: env.py
create_vc/: __init__.py  check_channel_name.py  create_vc.py
database/: mongodb_async.py
discord_components/: component.py  dpy_overrides.py  interaction.py
easter_eggs/: __init__.py  homie.py
errands/: __init__.py  chatbot_resource.py  color.py  dropdown_faq.py  feedback.py  game_center.py  study_club.py  topic.py  welcome.py
feature_func/: easy_mongodb.py  stable_json.py
models/: __init__.py  bad_users.py  confessions.py  conversation_history.py  enums.py  errand_data.py  extract_file_records.py  transactions.py  user_ai_chat_history.py  user_daily_study_time.py  user_facts.py  user_study_sections.py  user_study_time.py  users.py  voice_channels.py
other_modules/: image_handle.py  time_modules.py
schedule/: __init__.py  bad_words.py  static_channels.py
security/: __init__.py  bad_words_check.py  cam_check.py  introduce.py
utils/: ai_coversation.py  image_handle.py  mocker.py  time_modules.py
(+138 files in other folders)
