[tool.poetry]
name = "mie-combie"
version = "0.1.0"
description = ""
authors = ["Khoi"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10.10"
discord = "^2.3.2"
beanie = "^1.23.1"
pytz = "^2023.3.post1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pre-commit = "^3.5.0"

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"main.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
